--- a/pages/SC_ADMIN_103.html
+++ b/pages/SC_ADMIN_103.html
@@ -44,8 +44,8 @@
                 <!-- SNB -->
                 <div class="left_filter_cont">
                     <ul class="snb">
-                        <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_1.svg"></div>경영 매뉴얼 분류 체계</a></li>
-                        <li class="active"><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb3_2.svg"></div>결재 모니터링</a></li>
+                        <li><a href="#" class="body16B"><div class="ico_snb admin_menu_description"></div>경영 매뉴얼 분류 체계</a></li>
+                        <li class="active"><a href="#" class="body16B"><div class="ico_snb admin_menu_stamp"></div>결재 모니터링</a></li>
                     </ul>
                 </div>
                 <!-- //SNB -->
