--- a/pages/SC_ADMIN_302.html
+++ b/pages/SC_ADMIN_302.html
@@ -44,7 +44,7 @@
                     <!-- SNB -->
                     <div class="left_filter_cont">
                         <ul class="snb">
-                            <li class="active"><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb3_1.svg"></div>인증 기록 분류 체계</a></li>
+                            <li class="active"><a href="#" class="body16B"><div class="ico_snb admin_menu_formatList"></div>인증 기록 분류 체계</a></li>
                         </ul>
                     </div>
                     <!-- //SNB -->
