--- a/pages/SC_ADMIN_401.html
+++ b/pages/SC_ADMIN_401.html
@@ -44,7 +44,7 @@
                 <!-- SNB -->
                 <div class="left_filter_cont">
                     <ul class="snb">
-                        <li class="active"><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb4_1.svg"></div>이력 조회</a></li>
+                        <li class="active"><a href="#" class="body16B"><div class="ico_snb admin_menu_history"></div>이력조회</a></li>
                     </ul>
                 </div>
                 <!-- //SNB -->
