--- a/admin_sitemap.html
+++ b/admin_sitemap.html
@@ -268,7 +268,7 @@
           <h2>시스템관리 [표준관리]</h2>
           <ul>
             <li class="bg1"> 
-              <span class="sub-title">표준- 분류 체계</span>
+              <span class="sub-title">표준- 분류 체계></span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_001.html" target="viewer">SC_ADMIN_001.html</a>
                 <a href="pages/SC_ADMIN_001.html" target="_blank" class="new-win">새창</a>
@@ -282,7 +282,7 @@
               </div>
             </li>
             <li class="bg1">
-              <span class="sub-title">유효성 평가표 목록</span>
+              <span class="sub-title">유효성 평가표 목록></span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_003.html" target="viewer">SC_ADMIN_003.html</a>
                 <a href="pages/SC_ADMIN_003.html" target="_blank" class="new-win">새창</a>
@@ -296,7 +296,7 @@
               </div>
             </li>
             <li class="bg1">
-              <span class="sub-title">유성평가표 미리보기 (<em class="fc-red">처리 버튼 잡아야함</em>)</span>
+              <span class="sub-title">유성평가표 미리보기</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_005.html" target="viewer">SC_ADMIN_005.html</a>
                 <a href="pages/SC_ADMIN_005.html" target="_blank" class="new-win">새창</a>
@@ -310,7 +310,7 @@
               </div>
             </li>
             <li class="bg1">
-              <span class="sub-title">표준 결제 모니터링</span>
+              <span class="sub-title">표준 결제 모니터링><em>table 추가필요</em></span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_007.html" target="viewer">SC_ADMIN_007.html</a>
                 <a href="pages/SC_ADMIN_007.html" target="_blank" class="new-win">새창</a>
@@ -324,7 +324,7 @@
               </div>
             </li>
             <li class="bg1">
-              <span class="sub-title">담당 부서 삭제된 표준 목록</span>
+              <span class="sub-title">담당 부서 삭제된 표준 목록></span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_008.html" target="viewer">SC_ADMIN_008.html</a>
                 <a href="pages/SC_ADMIN_008.html" target="_blank" class="new-win">새창</a>
@@ -348,7 +348,7 @@
           <h2>시스템관리 [경영매뉴얼]</h2>
           <ul>
             <li class="bg1"> 
-              <span class="sub-title">경영매뉴얼 - 분류체계</span>
+              <span class="sub-title">경영매뉴얼 - 분류체계></span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_101.html" target="viewer">SC_ADMIN_101.html</a>
                 <a href="pages/SC_ADMIN_101.html" target="_blank" class="new-win">새창</a>
@@ -362,7 +362,7 @@
               </div>
             </li>
             <li class="bg1"> 
-              <span class="sub-title">경영 매뉴얼 결재 모니터링</span>
+              <span class="sub-title">경영 매뉴얼 결재 모니터링></span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_103.html" target="viewer">SC_ADMIN_103.html</a>
                 <a href="pages/SC_ADMIN_103.html" target="_blank" class="new-win">새창</a>
@@ -373,14 +373,14 @@
           <h2>시스템관리 [수급업체 작업표준]</h2>
           <ul>
             <li class="bg1"> 
-              <span class="sub-title">수급업체 작업표준 결재 모니터링</span>
+              <span class="sub-title">수급업체 작업표준 결재 모니터링><em>table 추가필요</em></span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_201.html" target="viewer">SC_ADMIN_201.html</a>
                 <a href="pages/SC_ADMIN_201.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg1"> 
-              <span class="sub-title">폐기된 표준 목록</span>
+              <span class="sub-title">폐기된 표준 목록></span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_202.html" target="viewer">SC_ADMIN_202.html</a>
                 <a href="pages/SC_ADMIN_202.html" target="_blank" class="new-win">새창</a>
@@ -397,7 +397,7 @@
           <h2>시스템관리 [인증기록 분류 체계]</h2>
           <ul>
             <li class="bg1"> 
-              <span class="sub-title">인증 기록 - 분류 체계</span>
+              <span class="sub-title">인증 기록 - 분류 체계></span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_301.html" target="viewer">SC_ADMIN_301.html</a>
                 <a href="pages/SC_ADMIN_301.html" target="_blank" class="new-win">새창</a>
@@ -424,7 +424,7 @@
           <h2>시스템관리 [시스템관리]</h2>
           <ul>
             <li class="bg1"> 
-              <span class="sub-title">부서 및 사용자 관리</span>
+              <span class="sub-title">부서 및 사용자 관리></span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_501.html" target="viewer">SC_ADMIN_501.html</a>
                 <a href="pages/SC_ADMIN_501.html" target="_blank" class="new-win">새창</a>
@@ -437,35 +437,35 @@
                 <a href="pages/SC_ADMIN_502.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
-            <li class="bg2"> 
-              <span class="sub-title">사용자 - 속성 조회 </span>
+            <li class="bg1"> 
+              <span class="sub-title">사용자 - 속성 조회 ></span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_503.html" target="viewer">SC_ADMIN_503.html</a>
                 <a href="pages/SC_ADMIN_503.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             <li class="bg1"> 
-              <span class="sub-title">시스템 그룹 관리</span> 
+              <span class="sub-title">시스템 그룹 관리 ></span> 
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_504.html" target="viewer">SC_ADMIN_504.html</a>
                 <a href="pages/SC_ADMIN_504.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
-            <li class="bg2"> 
+            <li class="bg1"> 
               <span class="sub-title">시스템 관리 - 알림 메일 목록</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_505.html" target="viewer">SC_ADMIN_505.html</a>
                 <a href="pages/SC_ADMIN_505.html" target="_blank" class="new-win">새창</a>
               </div> 
             </li>
-            <li class="bg2"> 
+            <li class="bg1"> 
               <span class="sub-title">시스템 관리 - 알림 메일 내용 편집</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_506.html" target="viewer">SC_ADMIN_506.html</a> 
                 <a href="pages/SC_ADMIN_506.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
-            <li class="bg2"> 
+            <li class="bg1"> 
               <span class="sub-title">시스템 관리 - 설정</span>
               <div class="btn-wrap">
                 <a href="pages/SC_ADMIN_507.html" target="viewer">SC_ADMIN_507.html</a>
@@ -530,6 +530,22 @@
               <div class="btn-wrap">
                 <a href="guide_pages/treemap.html" target="viewer">treemap.html</a>
                 <a href="guide_pages/treemap.html" target="_blank" class="new-win">새창</a>
+              </div>
+            </li>
+
+            <li>
+              <span class="sub-title">시스템관리화면 메뉴별 아이콘</span>
+              <div class="btn-wrap">
+                <a href="guide_pages/admin_menu_icon.html" target="viewer">admin_menu_icon.html</a>
+                <a href="guide_pages/admin_menu_icon.html" target="_blank" class="new-win">새창</a>
+              </div>
+            </li>
+
+            <li>
+              <span class="sub-title">토스트메세지</span>
+              <div class="btn-wrap">
+                <a href="guide_pages/toastmessage.html" target="viewer">toastmessage.html</a>
+                <a href="guide_pages/toastmessage.html" target="_blank" class="new-win">새창</a>
               </div>
             </li>
             
