--- a/pages/SC_ADMIN_006.html
+++ b/pages/SC_ADMIN_006.html
@@ -44,12 +44,12 @@
                     <!-- SNB -->
                     <div class="left_filter_cont">
                         <ul class="snb">
-                            <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_1.svg"></div>관리표준 분류 체계</a></li>
-                            <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_2.svg"></div>기술표준 분류 체계</a></li>
-                            <li class="active"><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_3.svg"></div>유효성 평가표</a></li>
-                            <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_4.svg"></div>결재 모니터링</a></li>
-                            <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_5.svg"></div>담당 부서 삭제된 표준</a></li>
-                            <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_6.svg"></div>폐기된 표준</a></li>
+                            <li><a href="#" class="body16B"><div class="ico_snb admin_menu_book"></div>관리표준 분류 체계</a></li>
+                            <li><a href="#" class="body16B"><div class="ico_snb admin_menu_verified"></div>기술표준 분류 체계</a></li>
+                            <li class="active"><a href="#" class="body16B"><div class="ico_snb admin_menu_playlistCheck"></div>유효성 평가표</a></li>
+                            <li><a href="#" class="body16B"><div class="ico_snb admin_menu_stamp"></div>결재 모니터링</a></li>
+                            <li><a href="#" class="body16B"><div class="ico_snb admin_menu_team"></div>담당 부서 삭제된 표준</a></li>
+                            <li><a href="#" class="body16B"><div class="ico_snb admin_menu_delete"></div>폐기된 표준</a></li>
                         </ul>
                     </div>
                     <!-- //SNB -->
@@ -58,7 +58,7 @@
                     <div class="content">
                         <ol class="breadcrumb">
                             <li>표준 관리</li>
-                            <li class="on">관리표준 분류 체계</li>
+                            <li class="on">유효성 평가표</li>
                         </ol>
     
     
