--- a/pages/SC_ADMIN_201.html
+++ b/pages/SC_ADMIN_201.html
@@ -44,8 +44,8 @@
                 <!-- SNB -->
                 <div class="left_filter_cont">
                     <ul class="snb">
-                        <li class="active"><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_4.svg"></div>결재 모니터링</a></li>
-                        <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_6.svg"></div>폐기된 표준</a></li>
+                        <li class="active"><a href="#" class="body16B"><div class="ico_snb admin_menu_stamp"></div>결재 모니터링</a></li>
+                        <li><a href="#" class="body16B"><div class="ico_snb admin_menu_delete"></div>폐기된 표준</a></li>
                     </ul>
                 </div>
                 <!-- //SNB -->
