--- a/pages/SC_ADMIN_301.html
+++ b/pages/SC_ADMIN_301.html
@@ -16,7 +16,7 @@
     <!-- header -->
     <header class="admin_header">
         <h1 class="logo">
-            <span class="logo_img"></span>
+             <span class="logo_img"></span>
             <span class="logo_text body14B">표준관리시스템 시스템관리</span>
         </h1>
         <ul class="gnb">
@@ -44,7 +44,7 @@
                 <!-- SNB -->
                 <div class="left_filter_cont">
                     <ul class="snb">
-                        <li class="active"><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb3_1.svg"></div>인증 기록 분류 체계</a></li>
+                        <li class="active"><a href="#" class="body16B"><div class="ico_snb admin_menu_formatList"></div>인증 기록 분류 체계</a></li>
                     </ul>
                 </div>
                 <!-- //SNB -->
