--- a/pages/SC_ADMIN_504.html
+++ b/pages/SC_ADMIN_504.html
@@ -44,11 +44,10 @@
                 <!-- SNB -->
                 <div class="left_filter_cont">
                     <ul class="snb">
-                        <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb1_5.svg"></div>부서 및 사용자 관리</a></li>
-                        <li class="active"><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb5_2.svg"></div>시스템 그룹 관리</a></li>
-                        <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb5_3.svg"></div>알림 메일</a></li>
-                        <li><a href="#" class="body16B"><div class="ico_snb"><img src="../assets/images_admin/admin_ico-snb5_4.svg"></div>설정</a></li>
-
+                        <li><a href="#" class="body16B"><div class="ico_snb admin_menu_team"></div>부서 및 사용자 관리</a></li>
+                        <li class="active"><a href="#" class="body16B"><div class="ico_snb admin_menu_organization"></div>시스템 그룹 관리</a></li>
+                        <li><a href="#" class="body16B"><div class="ico_snb admin_menu_mail"></div>알림 메일</a></li>
+                        <li><a href="#" class="body16B"><div class="ico_snb admin_menu_setting"></div>설정</a></li>
                     </ul>
                 </div>
                 <!-- //SNB -->
